# ner-manager

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
core/: admin.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_inputfile_name.py  0003_namedentity.py  0004_remove_inputfile_content.py  0005_namedentity_input_file.py  0006_remove_namedentity_timecode_namedentity_segment.py  0007_namedentity_timecode.py
core/templates/: base.html  styles.css
core/templates/core/: file_detail.html  file_index.html  index.html  upload.html
ner_manager/: asgi.py  settings.py  urls.py  wsgi.py
