[project]
name = "ner-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.6",
    "spacy>=3.8.4",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "ruff>=0.9.9",
]

[tool.ruff]
extend-exclude = ["migrations"]
